spacing fix

--- a/src/components/sh-curtain/style/default.scss
+++ b/src/components/sh-curtain/style/default.scss
@@ -7,7 +7,7 @@ sh-curtain {
     left: 0;
     bottom: 0;
     opacity: 0;
-    background: rgba(25,25,25,.95);
+    background: rgba(25,25,25,.9);
     z-index: 8;
     transition: none;
     pointer-events: none;
