--- a/src/components/sh-modal/style/default.scss
+++ b/src/components/sh-modal/style/default.scss
@@ -26,7 +26,7 @@
   }
 
   .body {
-    padding: 2rem;
+    padding: 3rem 2rem 2rem 2rem;
   }
 
   &.active {
